# aumos-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
aumos-cli/: pyproject.toml
aumos-cli/src/aumos_cli/: __init__.py  main.py
aumos-cli/src/aumos_cli/commands/: __init__.py  api.py  config.py  events.py
aumos-mcp-server/: pyproject.toml
aumos-mcp-server/src/aumos_mcp_server/: __init__.py  config.py  schemas.py  server.py
aumos-mcp-server/src/aumos_mcp_server/tools/: __init__.py  agents.py  benchmarks.py  data.py  governance.py  models.py  runs.py
aumos-mcp-server/tests/: test_tools.py
examples/: README.md
examples/python/: quickstart.py
examples/typescript/: quickstart.ts
go/: README.md  client.go  go.mod  models.go
java/: README.md  pom.xml
java/src/main/java/io/aumos/sdk/: AumOSClient.java
openapi/: aumos-api.yaml  codegen-config.yaml
python/: README.md  pyproject.toml
python/src/aumos_sdk/: __init__.py  _pagination.py  _rate_limit.py  _retry.py  _spell_check.py  _tracing.py  auth.py  client.py  error_unifier.py  exceptions.py  go_client.py  integration_guide.py  java_client.py  models.py  openapi_codegen.py  python_async_client.py  typescript_client.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: _retry.ts  client.ts  errors.ts  index.ts  types.ts
