[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-mcp-server"
version = "1.0.0"
description = "MCP server exposing the AumOS platform as agent-callable tools"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "aumos-sdk>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
http = [
    "starlette>=0.37",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aumos-mcp-server = "aumos_mcp_server.server:run_stdio"

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
