[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-sdk"
version = "1.0.0"
description = "Official Python SDK for the AumOS Enterprise platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "AumOS Platform Team", email = "platform@aumos.io" },
]
keywords = ["aumos", "ai", "agents", "enterprise", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",          # mock httpx in tests
]

[project.urls]
Homepage = "https://aumos.io"
Documentation = "https://docs.aumos.io/sdk/python"
Repository = "https://github.com/aumos-enterprise/aumos-sdk"
"Issue Tracker" = "https://github.com/aumos-enterprise/aumos-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_sdk"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/aumos_sdk --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/aumos_sdk"]
omit = ["src/aumos_sdk/_generated/*"]
